src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Google_Buyer_Id__c</fullName>
        <inlineHelpText>Id assigned to the contact by Google.</inlineHelpText>
        <label>Deprecated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Hosted_Profiles__c</fullName>
        <description>JSON string containing IDs for all remotely hosted customer profiles linked to this contact (includes profiles stored at multiple payment processors)</description>
        <inlineHelpText>JSON string containing IDs for all remotely hosted customer profiles linked to this contact (includes profiles stored at multiple payment processors)</inlineHelpText>
        <label>Hosted Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Member_Pricing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow PaymentConnect add-ons to present member-only pricing to this customer.</description>
        <inlineHelpText>Check this box to allow PaymentConnect add-ons to present member-only pricing to this customer.</inlineHelpText>
        <label>Member Pricing Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__PayPal_Payer_Id__c</fullName>
        <inlineHelpText>Id assigned by PayPal to this contact.</inlineHelpText>
        <label>PayPal Payer Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( NOT (ISBLANK ( AccountId )),( Account.BillingPostalCode  &lt;&gt;  Account.ShippingPostalCode ))</errorConditionFormula>
        <errorMessage>contact is in the zip code of its account</errorMessage>
    </validationRules>
</CustomObject>